--- a/projec/app/templates/home.html
+++ b/projec/app/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Welcome to the Homepage!</h1>
+<h1><span style="font-family: monospace">Welcome to the Homepage!</span></h1>
 {% endblock %}
